syntax = "proto3";
package contracts;

message ClipInfo {
    Timestamp initial_date_curated = 1;
    Timestamp last_date_curated = 2;
    string curator_information = 3;
    string title = 4;
    string description = 5;
    string media_uri = 6;
    string media_type = 7;
    int32 priority = 8;
}

message EpisodeInfo {
    Timestamp initial_date_curated = 1;
    Timestamp last_date_curated = 2;
    string curator_information = 3;
    Timestamp date_aired = 4;
    string title = 5;
    string description = 6;
    string media_uri = 7;
    string media_type = 8;
    int32 priority = 9;
}

message PendingResearchItem {
    string lease_id = 1;
    EpisodeInfo episode = 2;
    repeated ClipInfo clips = 3;
}

message CompletedResearchItem {
    Timestamp research_date = 1;
    EpisodeInfo episode_info = 2;
    int64 clip_duration = 3;
    repeated int64 clip_offsets = 4;
    string lease_id = 5;
    bool revoke_lease = 6;
}